[gd_scene load_steps=3 format=3 uid="uid://dlgeopfl613iw"]

[ext_resource type="Script" path="res://scripts/menus/main_menu.gd" id="1_wdkrt"]
[ext_resource type="AudioStream" uid="uid://48oxvady77a0" path="res://assets/sounds/Menu.mp3" id="2_7hlrx"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wdkrt")

[node name="fondo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="separador" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="titulo" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Greedventures
Avaro's Quest"
horizontal_alignment = 1
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="separador2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="play" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
text = "PLAY
"

[node name="options" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
text = "OPTIONS
"

[node name="quit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
text = "QUIT
"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_7hlrx")
autoplay = true
bus = &"Music"

[connection signal="button_down" from="MarginContainer/HBoxContainer/VBoxContainer/play" to="." method="_on_play_button_down"]
[connection signal="button_down" from="MarginContainer/HBoxContainer/VBoxContainer/options" to="." method="_on_options_button_down"]
[connection signal="button_down" from="MarginContainer/HBoxContainer/VBoxContainer/quit" to="." method="_on_quit_button_down"]
